# sae_trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gpt2_baseline.yaml
docs/: feature_cards.json  feature_scores.csv  index.html
notebooks/: sae_inference.ipynb  sae_semantic_eval.ipynb  sae_training.ipynb
sae_trainer/: __init__.py  activation_collector_utils.py  dataset_utils.py  feature_tracer_eval_utils.py  feature_tracer_utils.py  model_utils.py  sae_training_module.py  train.py  train_utils.py
sae_trainer/core/: dataset_utils.py
sae_trainer/sae_semantic_eval/: __init__.py  eval_utils.py  feature_tracer_eval_utils.py  feature_tracer_export_utils.py  feature_tracer_utils.py
sae_trainer/sae_training/: train.py  train_utils.py
